# TreeSnake

./: .gitignore  CHANGELOG.md  README.md  TODO.md  build.py  main.py  pyproject.toml  requirements.txt  treesnake.yml
.github/workflows/: build.yml
app/: __init__.py  cli.py  constants.py  formatters.py  scanner.py  templates.py  utils.py
hooks/: hook-cli.py
src/: main.py
src/cli/: _version.py  app.py  art.py  main.py  types.py  utils.py
src/cli/commands/: art.py  create.py  init.py  scan.py  version.py
src/core/: __init__.py  clipboard.py  config_discovery.py  config_reader.py  creator.py  file_reader.py  formatter.py  gitignore_manager.py  gitignore_parser.py  logger.py  rule.py  scanner.py  template_creator.py  template_manager.py  template_serializer.py  update_checker.py
src/domain/: __init__.py
src/domain/models/: directory.py  file.py  scanner_config.py  template.py
src/formatter/: __init__.py  formatter.py
src/formatters/: base_formatter.py
src/models/: __init__.py  directory.py  file.py  scan_config.py  scan_result.py  scan_template.py
src/scanner/: __init__.py  scanner.py
tests/: test_clipboard.py  test_config_discovery.py  test_config_reader.py  test_file_reader.py  test_formatter.py  test_gitignore_manager.py  test_gitignore_parser.py  test_init.py  test_rules.py  test_scan_gititgnore_resolution.py  test_scanner.py  test_template_creator.py  test_update_checker.py  test_utils.py
