[project]
name = "treesnake"
version = "0.2.0"
description = "TreeSnake — A utility for scanning and documenting project structure while preserving file contents."
authors = [
    {name = "twentyxic",email = "twenty.xic@yandex.ru"}
]
license = {text = "MIT License"}
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "typer (>=0.23.0,<0.24.0)",
    "rich (>=14.3.2,<15.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[project.scripts]
treesnake = "cli.cli_main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]