[project]
name = "treesnake"
version = "0.2.0"
description = "TreeSnake — A utility for scanning and documenting project structure while preserving file contents."
authors = [
    {name = "twentyxic", email = "twenty.xic@yandex.ru"}
]
license = {text = "MIT License"}
requires-python = ">=3.12, <3.15"
dependencies = [
    "pydantic>=2.12.5,<3.0.0",
    "typer>=0.23.0,<0.24.0",
    "rich>=14.3.2,<15.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0,<7.0.0",
    "pytest>=9.0.0,<10.0.0",
]

[project.scripts]
treesnake = "cli.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "cli" },
    { include = "core" },
    { include = "models" },
    { include = "utils" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]